--- a/client/profile.jade
+++ b/client/profile.jade
@@ -155,9 +155,9 @@ template(name='user_about')
                     //- +violations
                     //- +user_card_replacements
                     //- +user_signatures
-                if is_user
-                    +user_following
-                    +follow_user
+                //- if is_user
+                //-     +user_following
+                //-     +follow_user
         .six.wide.column
             if user_is_resident
                 if is_staff
