--- a/client/staff.jade
+++ b/client/staff.jade
@@ -4,7 +4,7 @@ template(name='staff')
             h1.ui.center.aligned.grey.header 
                 +i name='employee-card'
                 |staff
-            i.massive.loading.brown.poo.icon
+            //- i.massive.loading.brown.poo.icon
             a.ui.big.basic.button(href='/add_resident')
                 i.user.shield.large.icon
                 | add resident
