--- a/client/nav.jade
+++ b/client/nav.jade
@@ -63,11 +63,11 @@ template(name='nav')
                             a.icon.item(href="/chat" class="{{isActivePath '/chat'}}")
                                 +i name='chat'
                                 //- i.chat.large.icon
-                            a.icon.item(href="/events" class="{{isActivePath '/events'}}")
-                                +i name='calendar'
-                                //- i.chat.large.icon
-                            a.icon.item(href="/groups" class="{{isActivePath '/groups'}}")
-                                +i name='group'
+                            if is_user
+                                a.icon.item(href="/events" class="{{isActivePath '/events'}}")
+                                    +i name='calendar'
+                                a.icon.item(href="/groups" class="{{isActivePath '/groups'}}")
+                                    +i name='group'
                                 //- i.chat.large.icon
                         //- if is_admin
                         //-     a.icon.item(href='/admin' class="{{isActivePath '/admin'}}")
@@ -89,7 +89,7 @@ template(name='nav')
                             i.large.loading.circle.notch.icon
                     else
                         a#logout.ui.mobile.hidden.icon.item(href='#' title='Log Out')
-                            i.sign.out.icon
+                            i.sign.out.large.icon
                 else
                     a.icon.item(href='/login' title='Login') 
                         i.sign.in.large.icon
