--- a/components/delta/delta.jade
+++ b/components/delta/delta.jade
@@ -9,27 +9,27 @@ template(name='delta')
                         | #{title}
                     unless is_loading
                         //- if is_admin
-                        .ui.icon.large.button.add_model_doc(title="Add #{title}")
+                        .ui.icon.large.basic.button.add_model_doc(title="Add #{title}")
                             i.plus.large.icon
                         //- if can_edit
                             //- +edit_circular.button
                         +user_list_toggle key='bookmark_ids' icon='bookmark' label='Bookmark' color='red'
             
                         if can_edit
-                            .ui.icon.large.button.edit_model
+                            .ui.icon.large.basic.button.edit_model
                                 i.cog.icon
                                 //- | Configure #{plural}
                         // .ui.divider
                         // // each sessions
-                        // //     .ui.icon.button.select_session(class=session_selector_class title='select session')
+                        // //     .ui.icon.basic.button.select_session(class=session_selector_class title='select session')
                         // //         i.play.icon
                         if current_delta
                             if is_dev
-                                .ui.icon.large.button.print_delta(title='Print Session Doc')
+                                .ui.icon.large.basic.button.print_delta(title='Print Session Doc')
                                     i.code.icon
-                            .ui.reset.icon.large.button(title='Reload Session')
+                            .ui.reset.icon.basic.button(title='Reload Session')
                                 i.refresh.icon
-                            .ui.delete_delta.icon.large.button(title='Delete Session')
+                            .ui.delete_delta.icon.basic.button(title='Delete Session')
                                 i.trash.icon
                         else
                             .create_delta.ui.large.button(title='new session')
@@ -58,8 +58,8 @@ template(name='facet')
             .active.title
                 .ui.grey.inline.header 
                     if icon
-                        i.icon(class=icon)
-                        //- +i name=icon            
+                        //- i.icon(class=icon)
+                        +i name=icon            
                     if title
                         |#{title}
                     else 
@@ -121,27 +121,27 @@ template(name='delta_result')
             //-         each tags
             //-             .ui.label
             //-                 |#{this}
-            +user_list_toggle key='bookmark_ids' icon='bookmark' label='Bookmark' color='red'
+            //- +user_list_toggle key='bookmark_ids' icon='bookmark' label='Bookmark' color='red'
             .extra
                 if is_model
-                    a.ui.button.route_model(href="/m/#{slug}")
+                    a.ui.basic.button.route_model(href="/m/#{slug}")
                         i.sitemap.icon
                         |view model
                     if is_admin
-                        a.ui.button.route_model(href="/model/edit/#{_id}")
+                        a.ui.basic.button.route_model(href="/model/edit/#{_id}")
                             i.edit.icon
                             |edit model
                 else
                     if can_edit
-                        a.ui.large.icon.button(href="/m/#{current_model.slug}/#{_id}/edit" title='edit')
+                        a.ui.large.icon.basic.button(href="/m/#{current_model.slug}/#{_id}/edit" title='edit')
                             i.pencil.large.icon
                             //- |edit
-                    a.ui.icon.large.button(href="/m/#{current_model.slug}/#{_id}/view" title='view')
+                    a.ui.icon.large.basic.button(href="/m/#{current_model.slug}/#{_id}/view" title='view')
                         i.right.chevron.large.icon
                         //- |view
                     //- if is_post
                     //-     unless is_author
-                +voting
+                //- +voting
                     //- if is_marketplace
                     //-     .ui.small.header karma price 
                     //-     .ui.header #{karma_price}
