--- a/components/delta/delta.jade
+++ b/components/delta/delta.jade
@@ -13,7 +13,7 @@ template(name='delta')
                             i.plus.large.icon
                         //- if can_edit
                             //- +edit_circular.button
-                        +user_list_toggle key='bookmark_ids' icon='bookmark' label='Bookmark' color='red'
+                        //- +user_list_toggle key='bookmark_ids' icon='bookmark' label='Bookmark' color='red'
             
                         if can_edit
                             .ui.icon.large.basic.button.edit_model
@@ -27,12 +27,12 @@ template(name='delta')
                             if is_dev
                                 .ui.icon.large.basic.button.print_delta(title='Print Session Doc')
                                     i.code.icon
-                            .ui.reset.icon.basic.button(title='Reload Session')
-                                i.refresh.icon
-                            .ui.delete_delta.icon.basic.button(title='Delete Session')
-                                i.trash.icon
+                                .ui.reset.icon.basic.button(title='Reload Session')
+                                    i.refresh.icon
+                                .ui.delete_delta.icon.basic.button(title='Delete Session')
+                                    i.trash.icon
                         else
-                            .create_delta.ui.large.button(title='new session')
+                            .create_delta.ui.large.blue.button(title='new session')
                                 i.plus.icon
                                 |session
                         .ui.segment
